- New: Can define country code for import.
- New: When invoice was generated from order, order date is visible on PDF, after order ref.
- New: [ task #181 ] Hide password of click2dial in user card
- New: Chart are faster to build
- New: Value of data into charts are visible on mouse hover.
- New: Import wizard can import contacts.
- New: Install process is now two times faster.
- New: Extra fields support int type.
- New: Add brazilian states.
- New: Automtic list of documents in ECM module is ok for customers,
       suppliers invoice, orders, customers orders, proposals and social contributions.
- Fix: Can use POS module with several concurrent users.

For developers:
- New: Can add a left menu into an existing top menu or left menu.
- New: Add webservice to get or create a product or service.
- New: Add webservice to get a user.
- New: Add more "hooks" (like hooks to change way of showing/editing lines into dictionnaries).
- New: Log module outputs can be setup with "or" rule (not only "xor").
- New: Add FirePHP output for logging module.
- New: Add trigger ACTION_DELETE and ACTION_MODIFY.
- New: Trigger now have a priority to define sort execution order.
- New: Can define different requests according to database type into migration files.
- New: Add "canvas" feature to overwrite page of thirdparty, contact, product with yours.
- New: Removed artichow deprecated libraries.
- New: A page can force reload of css style sheet
- New: A module can add import description for import wizard, even for tables with foreign keys.
- Qual: Add a lot of more PHPUnit tests.
- Qual: Data structure for supplier prices is simpler.
- Qual: Removed no more used external libraries.
- Qual: Cleaned a lot of dead code.
- Qual: More OOP (usage of "abstract", "static", ...), uniformize constructors.
- Qual: Fix a lot of checkstyle warnings.
- Qual: task #216 : Move /lib into /core/lib directory